--- a/Dashboard/Infra/index.html
+++ b/Dashboard/Infra/index.html
@@ -237,7 +237,7 @@
         <!-- Main Title Banner -->
         <section class="bg-stone-100 rounded-3xl py-8 px-4 text-center mb-12 border border-stone-200">
              <h1 class="text-3xl md:text-4xl font-black text-slate-800 mb-3">داشبورد مدیریتی برآورد هزینه</h1>
-            <p class="text-lg text-slate-500">تحلیل جامع هزینه‌های تکمیل زیرساخت‌های شهرک نمک‌آبرود</p>
+            <p class="text-lg text-slate-500">تحلیل جامع هزینه‌های تکمیل زیرساخت‌ها و پروژه‌های نیمه‌تمام</p>
         </section>
         
         <!-- Total Cost Card -->
@@ -246,7 +246,7 @@
                 <div class="absolute -inset-1 bg-gradient-to-r from-purple-200 to-indigo-200 rounded-full opacity-0 group-hover:opacity-100 transition duration-1000 blur-xl -z-10"></div>
                 <div class="relative bg-white rounded-3xl p-8 shadow-lg border border-slate-200 transition-all duration-300 hover:shadow-2xl hover:scale-105">
                     <p class="text-xl text-slate-600">مجموع کل هزینه نهایی مورد نیاز</p>
-                    <p class="text-6xl font-black text-slate-800 tracking-tight my-3">۵,۱۸۸.۶</p>
+                    <p class="text-6xl font-black text-slate-800 tracking-tight my-3">۵,۹۸۶.۲</p>
                     <div class="flex items-center justify-center gap-2">
                         <span class="bg-indigo-500 text-white px-3 py-1 rounded-full text-sm font-bold">میلیارد تومان</span>
                         <span class="text-slate-400 text-sm">(برآورد نهایی)</span>
@@ -260,25 +260,34 @@
             <div class="text-center">
                 <h2 class="section-title justify-center"><i class="fa-solid fa-chart-pie"></i>نمای کلی سرمایه‌گذاری</h2>
                 <p class="section-subtitle mx-auto">
-                    تفکیک کلان بودجه نشان می‌دهد که سرمایه‌گذاری به دو بخش اصلی تقسیم می‌شود: پروژه‌های زیربنایی در سطح کل شهرک و هزینه‌های مربوط به تکمیل زیرساخت‌های داخلی محلات.
+                    تفکیک کلان بودجه نشان می‌دهد که سرمایه‌گذاری به سه بخش اصلی تقسیم می‌شود: پروژه‌های زیربنایی فرامحله‌ای، زیرساخت‌های داخلی محلات و هزینه‌های تکمیل پروژه‌های مسکونی نیمه‌تمام.
                 </p>
             </div>
-            <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 text-center">
+            <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-6 text-center">
                 <div class="main-card">
                     <p class="text-xl font-bold text-slate-800 mb-2">پروژه‌های فرامحله‌ای</p>
-                    <p class="text-5xl font-black text-sky-600">۴,۳۴۸.۴ <span class="text-xl text-slate-500">میلیارد تومان</span></p>
+                    <p class="text-5xl font-black text-sky-600">۴,۶۲۷.۱ <span class="text-xl text-slate-500">م.ت</span></p>
                     <div class="breakdown-card-overlay">
                         <p class="text-right text-sm text-slate-600 leading-relaxed">
-                        شامل پروژه‌های کلانی مانند نیروگاه، تصفیه‌خانه، زهکشی اصلی و معابر ورودی که به کل شهرک خدمات‌رسانی می‌کنند و <span class="font-bold text-sky-700 bg-sky-100 px-2 py-1 rounded">۸۳.۸٪</span> از کل بودجه را تشکیل می دهد.
+                        شامل پروژه‌های کلانی مانند نیروگاه و تصفیه‌خانه که به کل شهرک خدمات‌رسانی می‌کنند و <span class="font-bold text-sky-700 bg-sky-100 px-2 py-1 rounded">۷۷.۳٪</span> از کل بودجه را تشکیل می دهد.
                         </p>
                     </div>
                 </div>
                 <div class="main-card">
                     <p class="text-xl font-bold text-slate-800 mb-2">زیرساخت‌های داخل محلات</p>
-                    <p class="text-5xl font-black text-amber-600">۸۴۰.۲ <span class="text-xl text-slate-500">میلیارد تومان</span></p>
+                    <p class="text-5xl font-black text-amber-600">۸۴۰.۲ <span class="text-xl text-slate-500">م.ت</span></p>
                     <div class="breakdown-card-overlay">
                          <p class="text-right text-sm text-slate-600 leading-relaxed">
-                        شامل تکمیل شبکه‌های آب، برق، گاز و راه‌سازی در داخل ۸ محله مسکونی و حوزه خدماتی است و <span class="font-bold text-amber-700 bg-amber-100 px-2 py-1 rounded">۱۶.۲٪</span> از بودجه را به خود اختصاص می‌دهد.
+                        شامل تکمیل شبکه‌های آب، برق، گاز و راه‌سازی در داخل ۸ محله مسکونی است و <span class="font-bold text-amber-700 bg-amber-100 px-2 py-1 rounded">۱۴.۰٪</span> از بودجه را به خود اختصاص می‌دهد.
+                        </p>
+                    </div>
+                </div>
+                 <div class="main-card">
+                    <p class="text-xl font-bold text-slate-800 mb-2">مسکونی نیمه‌تمام</p>
+                    <p class="text-5xl font-black text-red-600">۵۱۸.۹ <span class="text-xl text-slate-500">م.ت</span></p>
+                    <div class="breakdown-card-overlay">
+                         <p class="text-right text-sm text-slate-600 leading-relaxed">
+                        شامل هزینه تکمیل ویلاهای توسکا و پروژه باب‌الجواد است و <span class="font-bold text-red-700 bg-red-100 px-2 py-1 rounded">۸.۷٪</span> از بودجه را به خود اختصاص می‌دهد.
                         </p>
                     </div>
                 </div>
@@ -359,9 +368,9 @@
                 <div class="details-card">
                     <div class="details-card-front">
                          <h3 class="font-bold text-lg mb-2">💧 شبکه فاضلاب و تصفیه‌خانه</h3>
-                         <p class="text-4xl font-black text-gray-800">۹۲۱.۳</p><p class="text-gray-500">میلیارد تومان</p>
+                         <p class="text-4xl font-black text-gray-800">۱,۲۰۰.۰</p><p class="text-gray-500">میلیارد تومان</p>
                     </div>
-                    <div class="details-card-back"><h4>جزئیات پروژه فاضلاب</h4><ul><li>هزینه لوله‌گذاری <span>۵۷۲ م.ت</span></li><li>هزینه تصفیه‌خانه <span>۹۷.۱ م.ت</span></li><li>هزینه منهول‌ها <span>۲۳۵.۱ م.ت</span></li><li>طول کل شبکه <span>۸۸ کیلومتر</span></li></ul></div>
+                    <div class="details-card-back"><h4>جزئیات پروژه فاضلاب</h4><ul><li>هزینه لوله‌گذاری <span>۷۵۹ م.ت</span></li><li>هزینه تصفیه‌خانه <span>۱۲۹ م.ت</span></li><li>هزینه منهول‌ها <span>۳۱۲ م.ت</span></li><li>طول کل شبکه <span>۸۸ کیلومتر</span></li></ul></div>
                 </div>
                 <div class="details-card">
                     <div class="details-card-front">
@@ -383,6 +392,30 @@
                          <p class="text-4xl font-black text-gray-800">۱۰۴.۶</p><p class="text-gray-500">میلیارد تومان</p>
                     </div>
                     <div class="details-card-back"><h4>جزئیات ورودی شهرک</h4><ul><li>مساحت پل <span>۵,۷۰۰ م.م</span></li><li>طول پل <span>۷۶۰ متر</span></li><li>هزینه واحد <span>۱۶.۶ م.ت / م.م</span></li></ul></div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Unfinished Residential Projects -->
+        <section class="mb-12 main-card">
+            <div class="text-center">
+                <h2 class="section-title justify-center"><i class="fa-solid fa-house-chimney-window"></i>هزینه‌های پروژه‌های مسکونی نیمه‌تمام</h2>
+                <p class="section-subtitle mx-auto">این بخش شامل برآورد هزینه مورد نیاز جهت تکمیل پروژه‌های مسکونی باقی‌مانده است.</p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                <div class="details-card">
+                    <div class="details-card-front">
+                        <h3 class="font-bold text-lg mb-2">🌲 ۳۶ ویلایی توسکا</h3>
+                        <p class="text-4xl font-black text-gray-800">۴۴۳.۹</p><p class="text-gray-500">میلیارد تومان</p>
+                    </div>
+                    <div class="details-card-back"><h4>جزئیات پروژه توسکا</h4><ul><li>هزینه ساخت (۲۰,۷۳۰ م.م) <span>۴۱۴.۶ م.ت</span></li><li>هزینه محوطه‌سازی (۱۱,۷۱۲ م.م) <span>۲۹.۳ م.ت</span></li><li>متراژ کل ویلاها <span>۲۰,۷۳۰ متر مربع</span></li></ul></div>
+                </div>
+                <div class="details-card">
+                    <div class="details-card-front">
+                        <h3 class="font-bold text-lg mb-2">🕌 پروژه باب الجواد (مشهد)</h3>
+                        <p class="text-4xl font-black text-gray-800">۷۵.۰</p><p class="text-gray-500">میلیارد تومان</p>
+                    </div>
+                    <div class="details-card-back"><h4>جزئیات پروژه باب‌الجواد</h4><ul><li>درصد باقیمانده پروژه <span>~۵٪</span></li><li>کاربری <span>تجاری-اقامتی</span></li><li>موقعیت <span>مشهد</span></li></ul></div>
                 </div>
             </div>
         </section>
@@ -412,20 +445,28 @@
                 <p class="section-subtitle mx-auto">نمودار زیر ساختار نهایی بودجه را به صورت بصری نمایش می‌دهد.</p>
             </div>
             <div class="main-card">
-                <div class="flex flex-col md:flex-row items-center justify-between gap-4">
-                    <!-- Component 1 (Right side) -->
-                    <div class="text-center w-full md:w-1/3">
+                <div class="flex flex-col md:flex-row items-center justify-around gap-4">
+                    <!-- Component 1 -->
+                    <div class="text-center w-full md:w-1/4">
                         <p class="text-lg font-bold">پروژه‌های فرامحله‌ای</p>
-                        <p class="text-4xl font-black text-sky-600 my-2">۴,۳۴۸.۴</p>
+                        <p class="text-4xl font-black text-sky-600 my-2">۴,۶۲۷.۱</p>
                         <div class="h-4 bg-sky-400 rounded-full"></div>
                     </div>
                     <!-- Plus Icon -->
-                    <div class="text-6xl text-slate-300 my-4 md:my-0 font-light">+</div>
-                    <!-- Component 2 (Left side) -->
-                    <div class="text-center w-full md:w-1/3">
+                    <div class="text-4xl text-slate-300 my-2 md:my-0 font-light">+</div>
+                    <!-- Component 2 -->
+                    <div class="text-center w-full md:w-1/4">
                         <p class="text-lg font-bold">زیرساخت محلات</p>
                         <p class="text-4xl font-black text-amber-600 my-2">۸۴۰.۲</p>
                         <div class="h-4 bg-amber-400 rounded-full"></div>
+                    </div>
+                     <!-- Plus Icon -->
+                    <div class="text-4xl text-slate-300 my-2 md:my-0 font-light">+</div>
+                    <!-- Component 3 -->
+                    <div class="text-center w-full md:w-1/4">
+                        <p class="text-lg font-bold">مسکونی نیمه‌تمام</p>
+                        <p class="text-4xl font-black text-red-600 my-2">۵۱۸.۹</p>
+                        <div class="h-4 bg-red-400 rounded-full"></div>
                     </div>
                 </div>
                 <div class="flex justify-center my-6">
@@ -434,8 +475,8 @@
                 <!-- Total -->
                 <div class="bg-slate-100 p-6 rounded-2xl text-center">
                     <p class="text-xl font-bold">مجموع کل هزینه</p>
-                    <p class="text-5xl font-black text-indigo-600 mt-2">۵,۱۸۸.۶</p>
-                    <div class="w-full h-4 rounded-full mt-4" style="background: linear-gradient(to left, #38bdf8 83.8%, #fbbf24 83.8%);" title="پروژه‌های فرامحله‌ای: ۸۳.۸٪ | زیرساخت محلات: ۱۶.۲٪"></div>
+                    <p class="text-5xl font-black text-indigo-600 mt-2">۵,۹۸۶.۲</p>
+                    <div class="w-full h-4 rounded-full mt-4" style="background: linear-gradient(to left, #38bdf8 77.3%, #fbbf24 calc(77.3% + 14%), #f87171 calc(77.3% + 14%));" title="پروژه‌های فرامحله‌ای: ۷۷.۳٪ | زیرساخت محلات: ۱۴.۰٪ | مسکونی نیمه‌تمام: ۸.۷٪"></div>
                 </div>
             </div>
         </section>
@@ -601,3 +642,4 @@ hr.torabii@gmail.com</span></span> - شهریورماه ۱۴۰۴</p>
     </script>
 </body>
 </html>
+
