--- a/Dashboard/Maps/index.html
+++ b/Dashboard/Maps/index.html
@@ -218,8 +218,7 @@
                     zoneName: 'پهنه S1 - عرصه ورودی', mapUrl: 'https://uploadkon.ir/uploads/81ba02_2507-S1.jpg', zoneCode: 'S1', zoneArea: '72 هکتار', subZones: ['S11', 'S12', 'S13', 'S14'],
                     projects: [
                         { name: 'مرکز سلامت و تندرستی', code: 'S11', area: '114,249', builtUpArea: '91,399', location: 'ورودی شهرک', coords: { top: '38%', left: '50%' } },
-                        { name: 'زمین پارتی گلف (Pitch & Putt)', code: 'S12', area: '50,000', builtUpArea: '30,000', location: 'ورودی شهرک', coords: { top: '40%', left: '56%' } },
-                        { name: 'پیست موتورسواری سوپرکراس', code: 'S12', area: '40,000', builtUpArea: '24,000', location: 'ورودی شهرک', coords: { top: '41%', left: '57%' } },
+                        { name: 'مجموعه ورزشی و شهر بازی مدرن', code: 'S12/S13', area: '434,289', builtUpArea: '260,573', location: 'ورودی شهرک', coords: { top: '41%', left: '62%' } },
                         { name: 'آرنای سرگرمی‌های دیجیتال نمک‌آبرود', code: 'S13', area: '90,000', builtUpArea: '54,000', location: 'ورودی شهرک', coords: { top: '40%', left: '64%' } },
                         { name: 'شهر کسب و کار', code: 'S14', description: 'پهنه S14 برای خدمات کلان‌مقیاس کسب‌وکار طراحی شده است.', location: 'ورودی شهرک', coords: { top: '40%', left: '71%' } }
                     ]
@@ -227,10 +226,10 @@
                 {
                     zoneName: 'پهنه S2 - مراکز محلات', mapUrl: 'https://uploadkon.ir/uploads/81ba02_2508-S2.jpg', zoneCode: 'S2', zoneArea: '32.5 هکتار', subZones: ['S21', 'S22'],
                     projects: [
-                        { name: 'مرکز محله ۱ (تم فرهنگی)', code: 'S22', area: '40,000', builtUpArea: '16,000', location: 'مراکز محلات', coords: null },
-                        { name: 'مرکز محله ۲ (تم پذیرایی)', code: 'S22', area: '15,826', builtUpArea: '6,330', location: 'مراکز محلات', coords: null },
-                        { name: 'مرکز محله ۳ (تم بازی بزرگسالان)', code: 'S22', area: '25,000', builtUpArea: '10,000', location: 'مراکز محلات', coords: null },
-                        { name: 'مرکز محله ۴ (تم بازی کودکان)', code: 'S22', area: '35,000', builtUpArea: '14,000', location: 'مراکز محلات', coords: null }
+                        { name: 'مرکز محله ۱ (تم فرهنگی)', code: 'S22', area: '40,000', builtUpArea: '16,000', location: 'مراکز محلات', coords: { top: '55%', left: '55%' } },
+                        { name: 'مرکز محله ۲ (تم پذیرایی)', code: 'S22', area: '15,826', builtUpArea: '6,330', location: 'مراکز محلات', coords: { top: '55%', left: '67%' } },
+                        { name: 'مرکز محله ۳ (تم بازی بزرگسالان)', code: 'S22', area: '25,000', builtUpArea: '10,000', location: 'مراکز محلات', coords: { top: '75%', left: '66%' } },
+                        { name: 'مرکز محله ۴ (تم بازی کودکان)', code: 'S22', area: '35,000', builtUpArea: '14,000', location: 'مراکز محلات', coords: { top: '72%', left: '58%' } }
                     ]
                 },
                 { 
@@ -243,6 +242,19 @@
                     zoneName: 'پهنه S4 - عرصه تله‌کابین', mapUrl: 'https://uploadkon.ir/uploads/81ba02_2510-S4.jpg', zoneCode: 'S4', zoneArea: '6.2 هکتار', subZones: ['S41'],
                     projects: [
                         { name: 'تجاری و پارکینگ تله‌کابین', code: 'S41', area: '61,512', builtUpArea: '61,512', location: 'عرصه تله‌کابین', coords: { top: '90%', left: '80%' } }
+                    ]
+                },
+                {
+                    zoneName: 'پهنه R1 - مسکونی', mapUrl: defaultMap, zoneCode: 'R1', zoneArea: '3.1 هکتار', subZones: ['R11'],
+                    projects: [
+                        { name: 'مجتمع مسکونی محله ۷', code: 'R11', area: '30,800', builtUpArea: '30,800', location: 'عرصه مسکونی', coords: { top: '80%', left: '81%' } },
+                    ]
+                },
+                 {
+                    zoneName: 'پهنه R2 - مسکونی', mapUrl: defaultMap, zoneCode: 'R2', zoneArea: '10.4 هکتار', subZones: ['R22'],
+                    projects: [
+                        { name: 'مجتمع مسکونی محله ۸', code: 'R22', area: '34,272', builtUpArea: '41,750', location: 'عرصه مسکونی', coords: { top: '70%', left: '39%' } },
+                        { name: 'مجتمع مسکونی باغ کیوی', code: 'R22', area: '70,000', builtUpArea: '140,000', location: 'عرصه مسکونی', coords: { top: '60%', left: '71%' } },
                     ]
                 },
                 {
