--- a/Dashboard/Maps/index.html
+++ b/Dashboard/Maps/index.html
@@ -245,16 +245,16 @@
                     ]
                 },
                 {
-                    zoneName: 'پهنه R1 - مسکونی', mapUrl: defaultMap, zoneCode: 'R1', zoneArea: '3.1 هکتار', subZones: ['R11'],
+                    zoneName: 'پهنه R1 - مسکونی', mapUrl: 'https://uploadkon.ir/uploads/699120_2515-R11.jpg', zoneCode: 'R1', zoneArea: '3.1 هکتار', subZones: ['R11'],
                     projects: [
                         { name: 'مجتمع مسکونی محله ۷', code: 'R11', area: '30,800', builtUpArea: '30,800', location: 'عرصه مسکونی', coords: { top: '80%', left: '81%' } },
                     ]
                 },
                  {
-                    zoneName: 'پهنه R2 - مسکونی', mapUrl: defaultMap, zoneCode: 'R2', zoneArea: '10.4 هکتار', subZones: ['R22'],
+                    zoneName: 'پهنه R2 - مسکونی', mapUrl: 'https://uploadkon.ir/uploads/04cb20_2514-R22.jpg', zoneCode: 'R2', zoneArea: '10.4 هکتار', subZones: ['R22'],
                     projects: [
                         { name: 'مجتمع مسکونی محله ۸', code: 'R22', area: '34,272', builtUpArea: '41,750', location: 'عرصه مسکونی', coords: { top: '70%', left: '39%' } },
-                        { name: 'مجتمع مسکونی باغ کیوی', code: 'R22', area: '70,000', builtUpArea: '140,000', location: 'عرصه مسکونی', coords: { top: '60%', left: '71%' } },
+                        { name: 'مجتمع مسکونی باغ کیوی', code: 'R22', area: '70,000', builtUpArea: '140,000', location: 'عرصه مسکونی', coords: { top: '80%', left: '47%' } },
                     ]
                 },
                 {
@@ -481,4 +481,5 @@
     </script>
 </body>
 </html>
+" has been selected in the Canvas.
 
