--- a/Package/index.html
+++ b/Package/index.html
@@ -547,7 +547,10 @@
         </svg>
     </div>
 
-  document.addEventListener('DOMContentLoaded', function () {
+
+</script>
+<script>
+document.addEventListener('DOMContentLoaded', function () {
     const mainContent = document.getElementById('main-content');
     const iframeContainer = document.getElementById('iframe-container');
     const projectIframe = document.getElementById('project-iframe');
@@ -593,17 +596,7 @@
         }
     });
 });
-<script>
-// گوش دادن به پیام از iframe داخلی
-window.addEventListener('message', function(e){
-  if (e && e.data && e.data.type === 'NAVIGATE_BACK') {
-    // اینجا هم باید مثل AtlasTest یک تابع back داشته باشی
-    const backBtn = document.getElementById('back-to-dashboard-btn');
-    if (backBtn) backBtn.click();
-  }
-});
 </script>
-
 </body>
 </html>
 
