--- a/Package/index.html
+++ b/Package/index.html
@@ -548,7 +548,7 @@
     </div>
 
 
-</script>
+<script>
 document.addEventListener('DOMContentLoaded', function () {
     const mainContent = document.getElementById('main-content');
     const iframeContainer = document.getElementById('iframe-container');
